[package]
name = "lap_jv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapjv = "0.2.1"
rand = "0.8.5"
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = true